# whatever

./: .gitignore  README.md  build.gradle  settings.gradle
cpp20/: .gitignore  CMakeLists.txt  class_ref_qualifier.cpp  concept.cpp  crtp_mixin.cpp  crtp_mixin.h  crtp_static_polymorphism.cpp  delete_func.cpp  exception.cpp  init_capture.cpp  perfect_forward.cpp  pimpl.cpp  pimpl.h  pimpl_client.cpp  ranges.cpp  sum_type.cpp  template_on_array.cpp  thread.cpp  tuple.cpp  variant.cpp
jbm/: build.gradle
main/: build.gradle
main/src/main/java/ray/eldath/whatever/: BytecodeExample.java  CollectionTest.java  InvokeBytecodeExample.java  (+2 more)
main/src/main/scala/: MonoidAndExtension.sc  ValDef.scala
main/src/main/scala/cats/: Booleans.sc  ContraFunctor.sc  Contravariant.sc  Eq.sc  Functor.sc  Monad.sc  Show.sc  SuperAdder.sc  TypeClass.sc
main/src/main/scala/cats/functor/: Invariant.sc
main/src/main/scala/cats/monad/: Eval.sc  Reader.sc  Writer.sc
main/src/test/java/: TestTest.java
perf/: build.gradle
perf/perf.newinst/: _benchmark_result_2020-01-22_1343.csv  _benchmark_result_2020-01-22_1343.txt  _benchmark_result_2020-01-22_1343.xlsx  build.gradle
src/main/java/ray/eldath/whatever/: CollectionTest.java  LambdaBytecodeExampleJava.java
src/main/kotlin/ray/eldath/whatever/: CollectionTestKt.kt  Delegation.kt  ExtensionBytecodeExample.kt
src/test/kotlin/ray/eldath/whatever/: ReflectAndMethodHandle.kt
x86/: current_time.asm  positive_negetive.asm  protected_bubble_sort.asm  protected_paged_hello_world.asm  protected_paged_interrupt.asm
(+17 files in other folders)
