cmake_minimum_required(VERSION 3.16)
project(cpp20)

set(CMAKE_CXX_COMPILER "/usr/bin/g++-10")
set(CMAKE_CXX_STANDARD 20)

find_package(Threads)
set(CMAKE_CXX_FLAGS "-pthread")

add_executable(class_ref_qualifier class_ref_qualifier.cpp)
add_executable(concept concept.cpp)
add_executable(crtp_mixin crtp_mixin.cpp)
add_executable(crtp_static_polymorphism crtp_static_polymorphism.cpp)
add_executable(delete_func delete_func.cpp)
add_executable(exception exception.cpp)
add_executable(init_capture init_capture.cpp)
add_executable(tuple tuple.cpp)
add_executable(perfect_forward perfect_forward.cpp)
add_executable(pimpl_client pimpl_client.cpp)
add_executable(ranges ranges.cpp)
add_executable(sum_type sum_type.cpp)
add_executable(template_on_array template_on_array.cpp)
add_executable(thread thread.cpp)
add_executable(variant variant.cpp)